...
                                        <rect key="frame" x="0.0" y="100" width="350" height="200"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="translateTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="350" id="Zzp-Jg-iSF"/>
...
                                        <rect key="frame" x="0.0" y="87.666666666666686" width="280" height="200"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="changeTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="Wy5-uz-1af">
...
                                        <rect key="frame" x="0.0" y="295.66666666666663" width="280" height="40"/>
                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="conversionButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="jCl-Iy-x9t"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fif-01-kOs">
                                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="locationButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="QW4-un-vXY"/>
...
                                                <rect key="frame" x="50" y="0.0" width="258.66666666666669" height="40"/>
                                                <color key="backgroundColor" name="weatherColour"/>
                                                <accessibility key="accessibilityConfiguration" identifier="CitySearchField"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="286.67000000000002" id="CHA-dY-ggh">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZa-ao-X4w">
                                                <rect key="frame" x="318.66666666666663" y="1.3333333333333321" width="40" height="37.666666666666671"/>
                                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="FIz-N8-4ib">
...
